// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LocalizedMessage /> Shoud find className if one is present 1`] = `
<span
  className="this-is-css-class"
>
  msg_key
</span>
`;

exports[`<LocalizedMessage /> Shoud find className if one is present 2`] = `
<span
  className="this-is-css-class"
>
  translation
</span>
`;

exports[`<LocalizedMessage /> Should find a translation  1`] = `
<span
  className="this-is-css-class"
>
  translation
</span>
`;

exports[`<LocalizedMessage /> should match snapshot 1`] = `
<span>
  msg_key
</span>
`;
